WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
264164
More non-unified build fixes
https://bugs.webkit.org/show_bug.cgi?id=264164
Summary
More non-unified build fixes
Philip Chimento
Reported
2023-11-03 10:07:15 PDT
Will submit a PR with some fixes for non-unified builds.
Attachments
Add attachment
proposed patch, testcase, etc.
Philip Chimento
Comment 1
2023-11-03 10:30:16 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19959
Philip Chimento
Comment 2
2023-11-03 10:37:49 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/19960
Philip Chimento
Comment 3
2023-11-03 10:38:32 PDT
Please ignore PR 19959. 19960 is the correct one.
Radar WebKit Bug Importer
Comment 4
2023-11-10 09:08:14 PST
<
rdar://problem/118237601
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug