Non-unified build fixes https://bugs.webkit.org/show_bug.cgi?id=264164

Reviewed by NOBODY (OOPS!).

Add missing header includes, and in one case remove 'static' from a
function declared in a header file; probably this wasn't intended to be
static, but the error was masked in unified builds.

* Source/JavaScriptCore/dfg/DFGCapabilities.cpp:
* Source/WebCore/crypto/gcrypt/GCryptRFC8032.cpp:
* Source/WebCore/crypto/gcrypt/GCryptRFC8032.h:
* Source/WebCore/css/CSSFontFaceRule.cpp:
* Source/WebCore/page/scrolling/ScrollingStateNode.cpp:
* Source/WebCore/page/scrolling/nicosia/ScrollingTreeOverflowScrollingNodeNicosia.cpp: